Use a LinkedList instead of a Vector to store MessageDigests